@@ -8,6 +8,7 @@ import ru.game.aurora.application.Camera;
 import ru.game.aurora.application.GameLogger;
 import ru.game.aurora.application.Localization;
 import ru.game.aurora.application.ResourceManager;
+import ru.game.aurora.common.Drawable;
 import ru.game.aurora.world.AuroraTiledMap;
 import ru.game.aurora.world.GameObject;
 import ru.game.aurora.world.World;
